# gdp_main

./: CMakeLists.txt  README.md  package.xml
include/: gnc_functions2.hpp
launch/: apf.launch  drone_with_camera.launch  flight_arena.launch  main.launch  multi_search.launch  multi_square.launch  px4.launch  run_camera_remote_1.launch  run_remote_1_test.launch  run_remote_1_test_darknet.launch  run_remote_2_test.launch  test.launch
launch/Flight_Arena_Test_Launch/: drone1_apm.launch  drone2_apm.launch
models/flight_arena/: model.config  model.sdf
msg/: DronePositionList.msg
src/: absultefly.cpp  apf1.cpp  apf2.cpp  apf_global_drone_1.cpp  apf_global_drone_2.cpp  apf_test_drone_1.cpp  geofence_global.cpp  lla_test.cpp  main.cpp  multi_square.cpp  piston.docx  search_detect_land_g.cpp  search_detect_store.cpp  search_detect_store_drone2.cpp  search_global.cpp  search_global2.cpp  square.cpp  sub.cpp  swarm_position.cpp  swarm_status.cpp  tracked_vehicles.cpp  try.cpp  trydrone1.cpp  trydrone2.cpp  uselocation.cpp  uselocation1.cpp  uselocation2.cpp  uselocation_tracking.cpp  uselocation_tracking2.cpp  uselocationf1.cpp  uselocationf2.cpp  waypoints_global.cpp
src/Flight_Arena_Test/: global_waypoints_fl.cpp  search_detect_drone2.cpp  search_detect_hv2.cpp  search_detect_hv_sl.cpp  search_detect_land_fl.cpp  tarkyollo.cpp  tk2.cpp  tk3.cpp  tracking.cpp  tracking_gpt.cpp  tracking_test.cpp  tracking_yolov5.cpp  waypoints.cpp
worlds/: drone_with_camera.world  flight_arena.world  test.world
